Fri Jan  6 02:34:55 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.h:
        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.h:

          Moved static const definitions out of class declaration as VC6
          doesn't support this.  Thanks to Wallace Zhang for the initial
          patch for Notify Service, which I've adapted for the Logging
          Service.

Fri Jan  6 01:57:00 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/ior_corbaloc/Makefile.am:

          Regenerated.

        * examples/ior_corbaloc/ior_corbaloc.mpc:

          Changed client and corbaname client projects not to inherit
          from portableserver.  These are pure clients.

          Changed corbaname client project to not add status_i.cpp to
          Source Files section.  It's not part of the client.

          Add *_IDL projects for compiling *.idl files.  This eliminates
          duplicate rules that would otherwise result when Makefile.am's
          are aggregated in the automake build.

        * examples/ior_corbaloc/corbaname_client.cpp

          Changed to #include "corbanameC.h" instead of
          "ior_corbaloc_client_i.h", which is actually part of the
          client project.

Thu Jan  5 15:50:47 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/Simple/bank/Makefile.am:
        * examples/Simple/chat/Makefile.am:
        * examples/Simple/echo/Makefile.am:
        * examples/Simple/grid/Makefile.am:
        * examples/Simple/time/Makefile.am:

          Regenerated.

        * examples/Simple/bank/bank.mpc:
        * examples/Simple/chat/chat.mpc:
        * examples/Simple/echo/echo.mpc:
        * examples/Simple/grid/grid.mpc:
        * examples/Simple/time/time.mpc:

          Add *_IDL projects for compiling *.idl files.  This eliminates