@@ -16,7 +16,7 @@ TAO_IDL_DEP = $(TAO_BUILDDIR)/TAO_IDL/tao_idl
 TAO_IDLFLAGS = -Ge 1 -Wb,pre_include=ace/pre.h -Wb,post_include=ace/post.h -I$(TAO_ROOT) -I$(srcdir) -g $(ACE_BUILDDIR)/apps/gperf/src/gperf
 TAO_ROOT = $(top_srcdir)
 
-## Makefile.Interop_Wchar_Server.am
+## Makefile.interop_wchar_IDL.am
 
 BUILT_SOURCES = \
   interop_wcharC.cpp \
@@ -47,7 +47,31 @@ interop_wchar-stamp: $(srcdir)/interop_wchar.idl $(TAO_IDL_DEP)
 	$(TAO_IDL) $(TAO_IDLFLAGS) $(srcdir)/interop_wchar.idl
 	@touch $@
 
-noinst_PROGRAMS = server
+
+## Makefile.Interop_Wchar_Client.am
+
+noinst_PROGRAMS = client
+
+client_CPPFLAGS = \
+  -I$(ACE_ROOT) \
+  -I$(ACE_BUILDDIR) \
+  -I$(TAO_ROOT) \
+  -I$(TAO_BUILDDIR)
+
+client_SOURCES = \
+  client.cpp \
+  interop_wcharC.cpp \
+  wchar_reference.cpp \
+  wchar_reference.h
+
+client_LDADD = \
+  $(TAO_BUILDDIR)/tao/libTAO_AnyTypeCode.la \
+  $(TAO_BUILDDIR)/tao/libTAO.la \
+  $(ACE_BUILDDIR)/ace/libACE.la
+
+## Makefile.Interop_Wchar_Server.am
+
+noinst_PROGRAMS += server
 
 server_CPPFLAGS = \
   -I$(ACE_ROOT) \
@@ -61,69 +85,11 @@ server_SOURCES = \
   interop_wchar_i.cpp \
   server.cpp \
   wchar_reference.cpp \
-  interop_wcharC.h \
-  interop_wcharC.inl \
-  interop_wcharS.h \
-  interop_wcharS_T.h \
-  interop_wcharS_T.inl \
   interop_wchar_i.h \
   wchar_reference.h
 
 server_LDADD = \
   $(TAO_BUILDDIR)/tao/libTAO_PortableServer.la \
-  $(TAO_BUILDDIR)/tao/libTAO_AnyTypeCode.la \
-  $(TAO_BUILDDIR)/tao/libTAO.la \
-  $(ACE_BUILDDIR)/ace/libACE.la
-
-## Makefile.Interop_Wchar_Client.am
-
-BUILT_SOURCES += \
-  interop_wcharC.cpp \
-  interop_wcharC.h \
-  interop_wcharC.inl \
-  interop_wcharS.h \
-  interop_wcharS.inl \
-  interop_wcharS_T.cpp \
-  interop_wcharS_T.h \
-  interop_wcharS_T.inl
-
-CLEANFILES += \
-  interop_wchar-stamp \
-  interop_wcharC.cpp \
-  interop_wcharC.h \
-  interop_wcharC.inl \
-  interop_wcharS.h \
-  interop_wcharS.inl \
-  interop_wcharS_T.cpp \
-  interop_wcharS_T.h \
-  interop_wcharS_T.inl
-
-interop_wcharC.cpp interop_wcharC.h interop_wcharC.inl interop_wcharS.h interop_wcharS.inl interop_wcharS_T.cpp interop_wcharS_T.h interop_wcharS_T.inl: interop_wchar-stamp
-
-interop_wchar-stamp: $(srcdir)/interop_wchar.idl $(TAO_IDL_DEP)
-	$(TAO_IDL) $(TAO_IDLFLAGS) $(srcdir)/interop_wchar.idl
-	@touch $@
-
-noinst_PROGRAMS += client
-
-client_CPPFLAGS = \
-  -I$(ACE_ROOT) \
-  -I$(ACE_BUILDDIR) \
-  -I$(TAO_ROOT) \
-  -I$(TAO_BUILDDIR)
-
-client_SOURCES = \
-  client.cpp \
-  interop_wcharC.cpp \
-  wchar_reference.cpp \
-  interop_wcharC.h \
-  interop_wcharC.inl \
-  interop_wcharS.h \
-  interop_wcharS_T.h \
-  interop_wcharS_T.inl \
-  wchar_reference.h
-
-client_LDADD = \
   $(TAO_BUILDDIR)/tao/libTAO_AnyTypeCode.la \
   $(TAO_BUILDDIR)/tao/libTAO.la \
   $(ACE_BUILDDIR)/ace/libACE.la
