@@ -1,19 +1,33 @@
 // -*- MPC -*-
 // $Id$
 
+project(*IDL): taoidldefaults, anytypecode {
+  IDL_Files {
+    interop_wchar.idl
+  }
+  custom_only = 1
+}
+
 project(*Server): taoserver {
+  after += *IDL
   Source_Files {
     interop_wchar_i.cpp
     wchar_reference.cpp
     server.cpp
+    interop_wcharS.cpp
+    interop_wcharC.cpp
+  }
+  IDL_Files {
   }
 }
 
 project(*Client): taoclient, anytypecode {
-  after += *Server
+  after += *IDL
   Source_Files {
     interop_wcharC.cpp
     wchar_reference.cpp
     client.cpp
+  }
+  IDL_Files {
   }
 }
