@@ -1,3 +1,15 @@
+Fri Jan  6 03:16:41 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * interop-tests/wchar/Makefile.am:
+
+          Regenerated.
+
+        * interop-tests/wchar/interop_wchar.mpc:
+
+          Add *_IDL projects for compiling *.idl files.  This eliminates
+          duplicate rules that would otherwise result when Makefile.am's
+          are aggregated in the automake build.
+
 Fri Jan  6 02:34:55 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
